# arctx

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.ja.md  README.md  next-plan.md  pyproject.toml  state_round_0.json  state_round_1.json
.codex/: hooks.json
.github/workflows/: ci.yml
bench/: storage_bench.py
docs/: AGENT_MODEL.md  ARCHITECTURE.md  DIRECTION.md  PLANNING_AND_RL.md  STATE_MODEL.md  WORKFLOW.md
docs/archive/: PURPOSE_AND_DESIGN.md  README.md  STATE_MODEL_MAPPING.md
docs/en/: AGENT_LOOP.md  API.md  CLI.md  CONCEPT.md  CORE.md  DIRECTION.md  EXTENSION.md  STATE_MODEL.md
docs/ja/: AGENT_LOOP.md  API.md  CLI.md  CONCEPT.md  CORE.md  DAG_CORE_MIGRATION_PLAN.md  DAG_CORE_REDESIGN.md  DIRECTION.md  EXTENSION.md  GIT_INTEGRATION.md  SIMPLE_DAG_REDESIGN_PLAN.md  SINGLE_OUTPUT_TRANSITION_PLAN.md  STATE_MODEL.md
examples/: basic_cli_loop.sh  benchmark_optimization.sh  debugging_trace.sh  demo.tape  demo_cli.tape  demo_env.sh  demo_tui.tape  generate_tui_graph.sh  ghostty_demo_script.md  parallel_agents.sh  quickstart_demo.sh  smoke_claude_code_hooks.sh
gui/: README.md  index.html  package-lock.json  package.json
gui/src/: api.ts  index.css
scripts/: arctx  release.py  seed_sample_runs.py
skills/arctx-extension-inproject/: SKILL.md
skills/arctx-extension-package/: SKILL.md
skills/arctx-record/: SKILL.md
tests/: test_batch.py  test_core.py  test_core_store.py  test_manager.py  test_state_model.py  test_v2_core.py  test_v2_integration.py
web/: README.md  package-lock.json  package.json  vite.config.ts
(+353 files in other folders)
